tests/transpiler/x/java/map_literal_dynamic.error
exit status 1
Main.java:6: error: incompatible types: String cannot be converted to int
        System.out.println(m["a"] + m["b"]);
                             ^
Main.java:6: error: array required, but Map<String,Integer> found
        System.out.println(m["a"] + m["b"]);
                            ^
Main.java:6: error: incompatible types: String cannot be converted to int
        System.out.println(m["a"] + m["b"]);
                                      ^
Main.java:6: error: array required, but Map<String,Integer> found
        System.out.println(m["a"] + m["b"]);
                                     ^
4 errors
